# copperclaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  install.sh  rebuild.sh  rustfmt.toml
crates/copperclaw-browser/: Cargo.toml
crates/copperclaw-browser/src/: container.rs  driver.rs  error.rs  guard.rs  lib.rs  render.rs
crates/copperclaw-cclaw/: Cargo.toml
crates/copperclaw-cclaw/src/: client.rs  commands.rs  lib.rs  main.rs  output.rs  protocol.rs  security.rs
crates/copperclaw-channels/cli/: Cargo.toml
crates/copperclaw-channels/cli/src/: lib.rs
crates/copperclaw-channels/core/: Cargo.toml
crates/copperclaw-channels/core/src/: adapter.rs  breadcrumb.rs  card.rs  container.rs  diff.rs  dm.rs  error_card.rs  lib.rs  registry.rs  setup.rs  testing.rs  thinking.rs  todo_list.rs
crates/copperclaw-channels/imessage/: Cargo.toml
crates/copperclaw-channels/imessage/src/: adapter.rs  applescript.rs  bridge.rs  bridge_osascript.rs  config.rs  factory.rs  lib.rs  parse.rs  poll.rs
crates/copperclaw-channels/matrix/: Cargo.toml
crates/copperclaw-channels/matrix/src/: adapter.rs  api.rs  config.rs  factory.rs  lib.rs  parse.rs  sync.rs
crates/copperclaw-container-rt/: Cargo.toml
crates/copperclaw-container-rt/src/: apple.rs  attest.rs  build.rs  dns.rs  docker.rs  lib.rs  nftables.rs  spec.rs
crates/copperclaw-host/: Cargo.toml
crates/copperclaw-host-delivery/: Cargo.toml
crates/copperclaw-host-delivery/src/: dispatch.rs  error.rs  lib.rs  loops.rs  service.rs  test_support.rs
crates/copperclaw-host-router/: Cargo.toml
crates/copperclaw-host-router/src/: debounce.rs  error.rs  hooks.rs  lib.rs  mention.rs  route.rs  session.rs
crates/copperclaw-host-sweep/: Cargo.toml
crates/copperclaw-host-sweep/src/: error.rs  lib.rs  service.rs  spawn_tracker.rs  task_store.rs  test_support.rs
crates/copperclaw-host-sweep/src/checks/: apology.rs  condition_checkin.rs  heartbeat.rs  mod.rs  processing.rs  recurrence.rs  scheduling.rs  stuck.rs  wake.rs
crates/copperclaw-host/src/: attestation.rs  boot.rs  channels_init.rs  config.rs  context.rs  daemon.rs  image_health.rs  lib.rs  log_redact.rs  main.rs  orphans.rs  sessions.rs  socket.rs  todo_watcher.rs  typing_ticker.rs
crates/copperclaw-host/src/container_manager/: broker.rs  broker_server.rs  budgets.rs  classify.rs  config.rs  egress.rs  (+7 more)
crates/copperclaw-host/tests/: action_handler_coverage.rs  condition_checkin.rs  daemon_lifecycle.rs  e2e_chat.rs  end_to_end.rs  replay.rs
crates/copperclaw-mcp/: Cargo.toml
crates/copperclaw-mcp/src/: client.rs  context.rs  error.rs  filter.rs  lib.rs  server.rs
crates/copperclaw-metrics/: Cargo.toml
crates/copperclaw-metrics/src/: lib.rs
crates/copperclaw-runner/: Cargo.toml
crates/copperclaw-runner/src/: compaction.rs  config.rs  destinations.rs  disallowed.rs  formatter.rs  lib.rs  main.rs  policy.rs  redact.rs  state.rs  subagent.rs  tools.rs
crates/copperclaw-setup/: Cargo.toml
crates/copperclaw-setup/src/: cli.rs  config.rs  lib.rs  main.rs  migrator.rs  prompt.rs  state.rs  units.rs
crates/copperclaw-setup/tests/: wizard_e2e.rs
crates/copperclaw-skills/: Cargo.toml
crates/copperclaw-skills/src/: error.rs  frontmatter.rs  lib.rs  materialize.rs  registry.rs  tool_names.rs
crates/copperclaw-skills/tests/: coverage.rs
crates/ironclaw-db/: Cargo.toml
crates/ironclaw-db/migrations/: 001_initial.sql  004_audit_log.sql  005_agent_turns.sql  008_outbound_dropped_messages.sql  010_tasks.sql  011_agent_group_subagent_depth.sql  012_container_config_coding_enabled.sql  013_sessions_source_session.sql  014_container_config_surface_thinking.sql
crates/ironclaw-db/src/: attachments.rs  central.rs  error.rs  lib.rs  migrate.rs  session.rs
crates/ironclaw-db/tests/: cross_mount_visibility.rs
crates/ironclaw-host/: Cargo.toml
crates/ironclaw-host-delivery/: Cargo.toml
crates/ironclaw-host-delivery/src/: dispatch.rs  error.rs  lib.rs  loops.rs  service.rs  system_actions.rs  test_support.rs
crates/ironclaw-host-router/: Cargo.toml
crates/ironclaw-host-router/src/: debounce.rs  error.rs  hooks.rs  lib.rs  route.rs  session.rs
crates/ironclaw-host-sweep/: Cargo.toml
crates/ironclaw-host-sweep/src/: clock.rs  error.rs  lib.rs  service.rs  spawn_tracker.rs  task_store.rs  test_support.rs
crates/ironclaw-host/src/: boot.rs  channels_init.rs  config.rs  container_manager.rs  context.rs  daemon.rs  image_health.rs  lib.rs  main.rs  orphans.rs  sessions.rs  socket.rs  todo_watcher.rs  typing_ticker.rs
crates/ironclaw-host/tests/: action_handler_coverage.rs  daemon_lifecycle.rs  e2e_chat.rs  end_to_end.rs  replay.rs
crates/ironclaw-iclaw/: Cargo.toml
crates/ironclaw-iclaw/src/: client.rs  commands.rs  lib.rs  main.rs  output.rs  protocol.rs
crates/ironclaw-mcp/: Cargo.toml
crates/ironclaw-mcp/src/: client.rs  context.rs  error.rs  lib.rs  server.rs
crates/ironclaw-modules/: Cargo.toml
crates/ironclaw-modules/src/: agent_to_agent.rs  approvals.rs  context.rs  interactive.rs  lib.rs  mount_security.rs  permissions.rs  scheduling.rs  typing.rs
crates/ironclaw-modules/tests/: install_smoke.rs
crates/ironclaw-onecli/: Cargo.toml
crates/ironclaw-onecli/src/: client.rs  lib.rs  types.rs
crates/ironclaw-providers/: Cargo.toml
crates/ironclaw-providers/src/: anthropic.rs  codex.rs  error.rs  lib.rs  ollama.rs  opencode.rs  subprocess.rs  types.rs
crates/ironclaw-providers/tests/: anthropic_sse.rs  ollama_conformance.rs  ollama_live.rs  ollama_shim.rs  ollama_sse.rs  subprocess_bridge.rs
crates/ironclaw-runner/: Cargo.toml
crates/ironclaw-runner/src/: compaction.rs  config.rs  destinations.rs  disallowed.rs  formatter.rs  lib.rs  main.rs  run.rs  state.rs  subagent.rs  tools.rs
crates/ironclaw-setup/: Cargo.toml
crates/ironclaw-setup/src/: cli.rs  config.rs  lib.rs  main.rs  migrator.rs  prompt.rs  state.rs  units.rs
crates/ironclaw-setup/tests/: wizard_e2e.rs
crates/ironclaw-types/: Cargo.toml
crates/ironclaw-types/src/: approval.rs  lib.rs  message.rs  provider.rs  routing.rs  session.rs
(+909 files in other folders)
