[workspace]
resolver = "3"
members = [
    "crates/copperclaw-types",
    "crates/copperclaw-db",
    "crates/copperclaw-host",
    "crates/copperclaw-host-router",
    "crates/copperclaw-host-delivery",
    "crates/copperclaw-host-sweep",
    "crates/copperclaw-container-rt",
    "crates/copperclaw-runner",
    "crates/copperclaw-providers",
    "crates/copperclaw-mcp",
    "crates/copperclaw-channels/core",
    "crates/copperclaw-channels/cli",
    "crates/copperclaw-channels/telegram",
    "crates/copperclaw-channels/slack",
    "crates/copperclaw-channels/discord",
    "crates/copperclaw-channels/resend",
    "crates/copperclaw-channels/github",
    "crates/copperclaw-channels/linear",
    "crates/copperclaw-channels/webex",
    "crates/copperclaw-channels/matrix",
    "crates/copperclaw-channels/teams",
    "crates/copperclaw-channels/mattermost",
    "crates/copperclaw-channels/line",
    "crates/copperclaw-channels/gchat",
    "crates/copperclaw-channels/imessage",
    "crates/copperclaw-channels/wechat",
    "crates/copperclaw-channels/whatsapp-cloud",
    "crates/copperclaw-channels/webhooks",
    "crates/copperclaw-channels/signal",
    "crates/copperclaw-channels/deltachat",
    "crates/copperclaw-channels/emacs",
    "crates/copperclaw-channels/x",
    "crates/copperclaw-modules",
    "crates/copperclaw-skills",
    "crates/copperclaw-cclaw",
    "crates/copperclaw-setup",
    "crates/copperclaw-onecli",
    "crates/copperclaw-metrics",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"
authors = ["Copperclaw Contributors"]
repository = "https://github.com/phildougherty/copperclaw"

[workspace.dependencies]
copperclaw-types          = { path = "crates/copperclaw-types" }
copperclaw-db             = { path = "crates/copperclaw-db" }
copperclaw-container-rt   = { path = "crates/copperclaw-container-rt" }
copperclaw-providers      = { path = "crates/copperclaw-providers" }
copperclaw-mcp            = { path = "crates/copperclaw-mcp" }
copperclaw-channels-core  = { path = "crates/copperclaw-channels/core" }
copperclaw-channels-cli   = { path = "crates/copperclaw-channels/cli" }
copperclaw-channels-telegram = { path = "crates/copperclaw-channels/telegram" }
copperclaw-channels-slack    = { path = "crates/copperclaw-channels/slack" }
copperclaw-channels-discord  = { path = "crates/copperclaw-channels/discord" }
copperclaw-channels-resend   = { path = "crates/copperclaw-channels/resend" }
copperclaw-channels-github   = { path = "crates/copperclaw-channels/github" }
copperclaw-channels-linear   = { path = "crates/copperclaw-channels/linear" }
copperclaw-channels-webex    = { path = "crates/copperclaw-channels/webex" }
copperclaw-channels-matrix   = { path = "crates/copperclaw-channels/matrix" }
copperclaw-channels-teams    = { path = "crates/copperclaw-channels/teams" }
copperclaw-channels-mattermost = { path = "crates/copperclaw-channels/mattermost" }
copperclaw-channels-line     = { path = "crates/copperclaw-channels/line" }
copperclaw-channels-gchat    = { path = "crates/copperclaw-channels/gchat" }
copperclaw-channels-imessage = { path = "crates/copperclaw-channels/imessage" }
copperclaw-channels-wechat   = { path = "crates/copperclaw-channels/wechat" }
copperclaw-channels-whatsapp-cloud = { path = "crates/copperclaw-channels/whatsapp-cloud" }
copperclaw-channels-webhooks = { path = "crates/copperclaw-channels/webhooks" }
copperclaw-channels-signal   = { path = "crates/copperclaw-channels/signal" }
copperclaw-channels-deltachat = { path = "crates/copperclaw-channels/deltachat" }
copperclaw-channels-emacs    = { path = "crates/copperclaw-channels/emacs" }
copperclaw-channels-x        = { path = "crates/copperclaw-channels/x" }
copperclaw-modules        = { path = "crates/copperclaw-modules" }
copperclaw-skills         = { path = "crates/copperclaw-skills" }
copperclaw-onecli         = { path = "crates/copperclaw-onecli" }
copperclaw-metrics        = { path = "crates/copperclaw-metrics" }
copperclaw-host-router    = { path = "crates/copperclaw-host-router" }
copperclaw-host-delivery  = { path = "crates/copperclaw-host-delivery" }
copperclaw-host-sweep     = { path = "crates/copperclaw-host-sweep" }
copperclaw-runner         = { path = "crates/copperclaw-runner" }

tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1", features = ["preserve_order"] }
rusqlite           = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2_sqlite        = "0.25"
r2d2               = "0.8"
clap               = { version = "4", features = ["derive", "env"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
axum               = "0.7"
tower              = "0.5"
rmcp               = "0.2"
bollard            = "0.18"
croner             = "2"
notify             = "7"
anyhow             = "1"
thiserror          = "2"
dotenvy            = "0.15"
async-trait        = "0.1"
dialoguer          = "0.11"
indicatif          = "0.17"
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4", "v5", "v7", "serde"] }
eventsource-stream = "0.2"
futures            = "0.3"
bytes              = "1"
url                = "2"
hex                = "0.4"
sha2               = "0.10"
dashmap            = "6"
x25519-dalek       = { version = "2", features = ["static_secrets"] }
ed25519-dalek      = "2"
hkdf               = "0.12"
aes-gcm            = "0.10"
rand               = "0.8"
rand_core          = "0.6"
metrics            = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
tokio-util         = "0.7"
tracing-appender   = "0.2"
toml               = "0.8"
ignore             = "0.4"
globset            = "0.4"
regex              = "1"
similar            = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# serde_json's `preserve_order` feature swaps Value's BTreeMap for an
# IndexMap, growing the variant past clippy's default size thresholds.
# Boxing every Result<_, ErrorPayload> across the host's handler trait
# would be invasive churn for a layout decision we don't control;
# allow these lints workspace-wide instead.
result_large_err = "allow"
large_enum_variant = "allow"
# rustfmt is the formatting authority (see rustfmt.toml). Its line layout
# — un-collapsing match arms, wrapping long calls — nudges a handful of
# functions just past clippy's 100-line `too_many_lines` threshold, which
# isn't configurable. We don't let formatting dictate function splits, so
# allow this pedantic lint workspace-wide.
too_many_lines = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
