[package]
name = "copperclaw-cclaw"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "copperclaw_cclaw"
path = "src/lib.rs"

[[bin]]
name = "cclaw"
path = "src/main.rs"

[dependencies]
copperclaw-types = { workspace = true }
copperclaw-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
