[package]
name = "copperclaw-container-rt"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
copperclaw-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }

[features]
# Gates the docker daemon-bound integration tests. Off by default so
# CI without /var/run/docker.sock stays green.
docker-tests = []

[lints]
workspace = true
