[package]
name = "copperclaw-mcp"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
copperclaw-types = { workspace = true }
copperclaw-db = { workspace = true }
copperclaw-channels-core = { workspace = true }
copperclaw-container-rt = { workspace = true }
copperclaw-browser = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true, features = ["client", "server", "transport-child-process", "transport-sse-client", "reqwest"] }
reqwest = { workspace = true }
htmd = "0.2"
ignore = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
# git2 is libgit2-sys under the hood. We pin a recent stable line and use
# the vendored libgit2 build so the workspace doesn't grow a runtime
# dependency on the host's system libgit2 (which is missing on many
# minimal CI images). Vendored-libgit2 also pulls in `cc`/`cmake` at
# build time only; the resulting binary statically links libgit2.
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
tempfile = "3"

[lints]
workspace = true
