[package]
name = "copperclaw-metrics"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio                       = { workspace = true }
tokio-util                  = { workspace = true }
tracing                     = { workspace = true }
thiserror                   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
