[package]
name = "copperclaw-runner"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "copperclaw-runner"
path = "src/main.rs"

[lib]
name = "copperclaw_runner"
path = "src/lib.rs"

[dependencies]
copperclaw-types          = { workspace = true }
copperclaw-db             = { workspace = true }
copperclaw-providers      = { workspace = true }
copperclaw-mcp            = { workspace = true }
copperclaw-metrics        = { workspace = true }
copperclaw-channels-core  = { workspace = true }
rmcp = { workspace = true, features = ["server"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
copperclaw-channels-core = { workspace = true }
tempfile = "3"

[lints]
workspace = true
