[package]
name = "copperclaw-setup"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "copperclaw-setup"
path = "src/main.rs"

[lib]
name = "copperclaw_setup"
path = "src/lib.rs"

[dependencies]
copperclaw-types = { workspace = true }
copperclaw-db = { workspace = true }
copperclaw-onecli = { workspace = true }
copperclaw-container-rt = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
wiremock = "=0.6.2"

[lints]
workspace = true
