[package]
name = "ironclaw-host-delivery"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ironclaw-types         = { workspace = true }
ironclaw-db            = { workspace = true }
ironclaw-channels-core = { workspace = true }
ironclaw-modules       = { workspace = true }
ironclaw-metrics       = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[lints]
workspace = true
