[package]
name = "ironclaw-iclaw"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ironclaw_iclaw"
path = "src/lib.rs"

[[bin]]
name = "iclaw"
path = "src/main.rs"

[dependencies]
ironclaw-types = { workspace = true }
ironclaw-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
