[package]
name = "ironclaw-mcp"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ironclaw-types = { workspace = true }
ironclaw-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true, features = ["client", "server", "transport-child-process", "transport-sse-client", "reqwest"] }
reqwest = { workspace = true }
htmd = "0.2"

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
tempfile = "3"

[lints]
workspace = true
