[package]
name = "ironclaw-modules"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ironclaw-types = { workspace = true }
# Used by `agent_to_agent::CreateAgentHandler` to insert into agent_groups /
# sessions / messaging_group_agents and to write the `create_agent_result`
# system row into the parent session's inbound.db.
ironclaw-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
croner = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[lints]
workspace = true
