[package]
name = "ironclaw-providers"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ironclaw-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wiremock = "=0.6.2"
tokio = { workspace = true }

[lints]
workspace = true
