[package]
name = "ironclaw-runner"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ironclaw-runner"
path = "src/main.rs"

[lib]
name = "ironclaw_runner"
path = "src/lib.rs"

[dependencies]
ironclaw-types          = { workspace = true }
ironclaw-db             = { workspace = true }
ironclaw-providers      = { workspace = true }
ironclaw-mcp            = { workspace = true }
ironclaw-metrics        = { workspace = true }
ironclaw-channels-core  = { workspace = true }
rmcp = { workspace = true, features = ["server"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
ironclaw-channels-core = { workspace = true }
tempfile = "3"

[lints]
workspace = true
