[package]
name = "ironclaw-setup"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ironclaw-setup"
path = "src/main.rs"

[lib]
name = "ironclaw_setup"
path = "src/lib.rs"

[dependencies]
ironclaw-types = { workspace = true }
ironclaw-db = { workspace = true }
ironclaw-onecli = { workspace = true }
ironclaw-container-rt = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
